--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,35 @@
   year={1978}
 }
 
+@article{librado2017ancient,
+  title={Ancient genomic changes associated with domestication of the horse},
+  author={Librado, Pablo and Gamba, Cristina and Gaunitz, Charleen and Der Sarkissian, Clio and Pruvost, M{\'e}lanie and Albrechtsen, Anders and Fages, Antoine and Khan, Naveed and Schubert, Mikkel and Jagannathan, Vidhya and others},
+  journal={Science},
+  volume={356},
+  number={6336},
+  pages={442--445},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+
+@book{dr._seuss_cat_1957,
+  added-at = {2009-11-11T20:37:13.000+0100},
+  address = {Boston},
+  author = {Seuss, Dr.},
+  biburl = {https://www.bibsonomy.org/bibtex/2ff4d7eb15115136d622e79d19d89cb9b/au7334},
+  interhash = {b1878b7c5fdb756c05acb780f8c9079d},
+  intrahash = {ff4d7eb15115136d622e79d19d89cb9b},
+  isbn = {9780394800011},
+  keywords = {813 bks juv},
+  publisher = {Houghton Mifflin},
+  timestamp = {2009-11-16T23:51:42.000+0100},
+  title = {The cat in the hat},
+  year = 1957
+}
+
+
+
+
 @article{axelrod1981evolution,
   title={The evolution of cooperation},
   author={Axelrod, Robert and Hamilton, William Donald},
