adding Whitlock comments and new figs

--- a/math_background/Math-background.tex
+++ b/math_background/Math-background.tex
@@ -617,7 +617,7 @@ p(x,y) = p(x) p(y).
 \end{equation}
 
 Given any function $f(x,y)$ of $x$ and $y$, one can define the expectation $\E[f(X,Y)]$ by integrating with respect to the distribution. Namely, 
-\begin{equation}
+\begin{equation}s
 \E[f(X,Y)]=\int \int f(x,y)p(x,y)\,dxdy \mbox{ for continuous case and } \sum_i \sum_j f(x_i,x_j) p_{i,j} \mbox{ in discrete case}
 \end{equation}
 
