--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,275 @@
   year={1978}
 }
 
+@book{hansen2013sterilized,
+  title={Sterilized by the state: eugenics, race, and the population scare in twentieth-century North America},
+  author={Hansen, Randall and King, Desmond},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+
+@article{nei1973linkage,
+  title={Linkage disequilibrium in subdivided populations},
+  author={Nei, Masatoshi and Li, Wen-Hsiung},
+  journal={Genetics},
+  volume={75},
+  number={1},
+  pages={213--219},
+  year={1973},
+  publisher={Genetics Soc America}
+}
+
+@article{hardy1908mendelian,
+  title={Mendelian proportions in a mixed population},
+  author={Hardy, Godfrey H and others},
+  journal={Science},
+  volume={28},
+  number={706},
+  pages={49--50},
+  year={1908}
+}
+
+@article{weinberg1908ber,
+  title={\"Uber den Nachweis der Vererbung beim Menschen},
+  author={Weinberg, Wilhelm},
+  journal={Jahres. Wiertt. Ver. Vaterl. Natkd.},
+  volume={64},
+  pages={369--382},
+  year={1908}
+}
+
+@article{paul2014wrong,
+  title={What was wrong with eugenics? Conflicting narratives and disputed interpretations},
+  author={Paul, Diane B},
+  journal={Science \& Education},
+  volume={23},
+  number={2},
+  pages={259--271},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{weinberg1909vererbungsgesetze,
+  title={{\"U}ber Vererbungsgesetze beim Menschen},
+  author={Weinberg, Wilhelm},
+  journal={Zeitschrift f{\"u}r induktive Abstammungs-und Vererbungslehre},
+  volume={2},
+  number={1},
+  pages={276--330},
+  year={1909},
+  publisher={Springer}
+}
+
+
+
+@article{slatkin2008linkage,
+  title={Linkage disequilibrium—understanding the evolutionary past and mapping the medical future},
+  author={Slatkin, Montgomery},
+  journal={Nature Reviews Genetics},
+  volume={9},
+  number={6},
+  pages={477--485},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{jennings1917numerical,
+  title={The numerical results of diverse systems of breeding, with respect to two pairs of characters, linked or independent, with special relation to the effects of linkage},
+  author={Jennings, Herbert Spencer},
+  journal={Genetics},
+  volume={2},
+  number={2},
+  pages={97},
+  year={1917},
+  publisher={Genetics Society of America}
+}
+
+@article{lewontin1960evolutionary,
+  title={The evolutionary dynamics of complex polymorphisms},
+  author={Lewontin, RC and Kojima, Ken-ichi},
+  journal={Evolution},
+  pages={458--472},
+  year={1960},
+  publisher={JSTOR}
+}
+
+@article{green2010draft,
+  title={A draft sequence of the Neandertal genome},
+  author={Green, Richard E and Krause, Johannes and Briggs, Adrian W and Maricic, Tomislav and Stenzel, Udo and Kircher, Martin and Patterson, Nick and Li, Heng and Zhai, Weiwei and Fritz, Markus Hsi-Yang and others},
+  journal={science},
+  volume={328},
+  number={5979},
+  pages={710--722},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{norton1983fisher,
+  title={Fisher’s entrance into evolutionary science: The role of eugenics},
+  author={Norton, Bernard},
+  journal={Dimensions of Darwinism: Themes and counterthemes in twentieth-century evolutionary theory},
+  pages={9--29},
+  year={1983},
+  publisher={Cambridge University Press and Editions de la Maison des Sciences de l’Homme~…}
+}
+
+@InBook{mazumdar2005eugenics_fisher,
+  title={Eugenics, human genetics and human failings: the Eugenics Society, its sources and its critics in Britain},
+  author={Mazumdar, Pauline},
+  year={2005}, 
+  publisher={Routledge},
+  chapter = 	 {Ideology and method: RA Fisher and Research in Eugenics},
+  year = 	 {},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTpages = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@book{united1952race,
+  title={The Race Concept: Results of an Inquiry},
+  author={UNESCO},
+  year={1952},
+  publisher={Greenwood Press}
+}
+
+
+
+@article{reilly2015eugenics,
+  title={Eugenics and involuntary sterilization: 1907--2015},
+  author={Reilly, Philip R},
+  journal={Annual review of genomics and human genetics},
+  volume={16},
+  pages={351--368},
+  year={2015},
+  publisher={Annual Reviews}
+}
+
+@article{gannett2013theodosius,
+  title={Theodosius Dobzhansky and the genetic race concept},
+  author={Gannett, Lisa},
+  journal={Studies in History and Philosophy of Biological and Biomedical Sciences},
+  volume={44},
+  number={3},
+  pages={250--261},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{paul1994dobzhansky,
+  title={Dobzhansky in the ‘Nature-Nurture’ Debate},
+  author={Paul, Diane B},
+  journal={The evolution of Theodosius Dobzhansky: essays on his life and thought in Russia and America},
+  pages={219--232},
+  year={1994},
+  publisher={Princeton University Press Princeton}
+}
+
+@book{okrent2020guarded,
+  title={The guarded gate: bigotry, eugenics, and the law that kept two generations of Jews, Italians, and other European immigrants out of America},
+  author={Okrent, Daniel},
+  year={2020},
+  publisher={Scribner}
+}
+
+@article{dobzhansky1961bogus,
+  title={A bogus “science” of race prejudice},
+  author={Dobzhansky, Theodosius},
+  journal={Journal of Heredity},
+  volume={52},
+  number={4},
+  pages={189--190},
+  year={1961},
+  publisher={Oxford University Press}
+}
+
+@article{lewontin1970race,
+  title={Race and intelligence},
+  author={Lewontin, Richard C},
+  journal={Bulletin of the Atomic Scientists},
+  volume={26},
+  number={3},
+  pages={2--8},
+  year={1970},
+  publisher={Taylor \& Francis}
+}
+
+@incollection{lewontin1972apportionment,
+  title={The apportionment of human diversity},
+  author={Lewontin, Richard C},
+  booktitle={Evolutionary biology},
+  pages={381--398},
+  year={1972},
+  publisher={Springer}
+}
+
+@article{allen2011eugenics,
+  title={Eugenics and modern biology: Critiques of eugenics, 1910--1945},
+  author={Allen, Garland E},
+  journal={Annals of human genetics},
+  volume={75},
+  number={3},
+  pages={314--325},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{tabery2008ra,
+  title={RA Fisher, Lancelot Hogben, and the origin (s) of genotype--environment interaction},
+  author={Tabery, James},
+  journal={Journal of the History of Biology},
+  volume={41},
+  number={4},
+  pages={717--761},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{stern2017california,
+  title={California’s sterilization survivors: an estimate and call for redress},
+  author={Stern, Alexandra Minna and Novak, Nicole L and Lira, Natalie and O’Connor, Kate and Harlow, Siob{\'a}n and Kardia, Sharon},
+  journal={American journal of public health},
+  volume={107},
+  number={1},
+  pages={50--54},
+  year={2017},
+  publisher={American Public Health Association}
+}
+
+
+@article{novak2018disproportionate,
+  title={Disproportionate sterilization of Latinos under California’s eugenic sterilization program, 1920--1945},
+  author={Novak, Nicole L and Lira, Natalie and O’Connor, Kate E and Harlow, Siob{\'a}n D and Kardia, Sharon LR and Stern, Alexandra Minna},
+  journal={American journal of public health},
+  volume={108},
+  number={5},
+  pages={611--613},
+  year={2018},
+  publisher={American Public Health Association}
+}
+
+@book{galton1883inquiries,
+  title={Inquiries into human faculty and its development},
+  author={Galton, Francis},
+  year={1883},
+  publisher={Macmillan}
+}
+
+@book{kevles1995name,
+  title={In the name of eugenics: Genetics and the uses of human heredity},
+  author={Kevles, Daniel J},
+  year={1995},
+  edition = 	 {2nd},
+  publisher={Harvard University Press}
+}
+
 @article{librado2017ancient,
   title={Ancient genomic changes associated with domestication of the horse},
   author={Librado, Pablo and Gamba, Cristina and Gaunitz, Charleen and Der Sarkissian, Clio and Pruvost, M{\'e}lanie and Albrechtsen, Anders and Fages, Antoine and Khan, Naveed and Schubert, Mikkel and Jagannathan, Vidhya and others},
@@ -592,6 +861,17 @@
   pages={685--687},
   year={1969},
   publisher={Wiley Online Library}
+}
+
+@article{provine1986geneticists,
+  title={Geneticists and race},
+  author={Provine, William B},
+  journal={American Zoologist},
+  volume={26},
+  number={3},
+  pages={857--888},
+  year={1986},
+  publisher={Oxford University Press UK}
 }
 
 @article{edwards1998natural,
