--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -60,6 +60,7 @@
 
 \newcommand{\wbar}{\overline{w}}
 % New commands added by Simon:
+\newcommand{\eqn}{eqn}
 \newcommand{\fis}{F_{\mathrm{IS}}}
 \newcommand{\fit}{F_{\mathrm{IT}}}
 \newcommand{\fst}{F_{\mathrm{ST}}}
@@ -105,6 +106,15 @@
 \newtcolorbox[use counter=question]{question}[1]{colback=red!5!white,
 colframe=red!75!black,fonttitle=\bfseries, 
 title= Question~\thequestion. #1}
+
+\newenvironment{ChapterSummary}{%
+\begin{center} {\large {\bf Chapter
+      \thechapter~summary.}} \end{center}
+We described:
+\begin{itemize}}{\end{itemize}}
+\tcolorboxenvironment{ChapterSummary}{ colback=blue!5!white,
+colframe=blue!75!black
+}
 
 %\newtcbox{\mybox}[1]{colback=red!5!white,
 %colframe=red!75!black,fonttitle=\bfseries,
@@ -198,16 +208,17 @@ true joy of descent with modification.
 \setlength{\parskip}{\baselineskip}
 %Copyright \copyright\ \the\year\
 %Author: \thanklessauthor\\
-  \small This book was developed from my set of notes for the \href{http://www-eve.ucdavis.edu/eve/pbg/}{Population
+  \small This text and the latex code are released under the
+  Creative Commons Attribution 3.0 Unported License. This book was developed from my set of notes for the \href{http://www-eve.ucdavis.edu/eve/pbg/}{Population
   Biology graduate group} core class (PBG200A) and Undergraduate Population and
   Quantitative Genetics class (EVE102) at UC Davis. Thanks to the many
   students who've read these notes and suggested improvements. Thanks
  to Simon Aeschbacher, Vince Buffalo, and Erin Calfee who read
- and extensively edited earlier drafts of these notes. To illustrate these notes I've used old scientific and natural history illustrations, in part
+ and extensively edited earlier drafts of these notes. To illustrate these notes, I've used old scientific and natural history illustrations, in part
  because they are out of copyright but mainly because they bring me
  joy. Many of the old images come from
  \href{https://www.biodiversitylibrary.org/}{Biodiversity Heritage
-   Library} a consortium of natural history institutions that are
+   Library}--- a consortium of natural history institutions that are
  digitizing their collections and make them freely available
  online. If you enjoy the images consider donating to the
  \href{http://library.si.edu/donate-bhl}{BHL}. Many of the data and
@@ -226,8 +237,11 @@ true joy of descent with modification.
 %\modulolinenumbers[2]
 \include{math_background/Equation_sheet}
 
+
+
 %\newpage
 \include{Chapters/intro}
+\include{Chapters/eugenics_frontpiece}
 \include{Chapters/chapter-01}
 \include{Chapters/Population_structure}
 \include{Chapters/genetic_drift}
